--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
   <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
-  <h1>Aqui vamos a hacer un titulo del blog</h1>
-  <p>Aqui va un parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis numquam et animi? In vitae mollitia iure commodi 
+                facere repellendus animi vel, enim quis modi, ab, temporibus adipisci! Aliquid, placeat quisquam.</p>
+        </div>
+    </div>
 </body>
 </html>
