--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera">Cabecera</div>
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">
+                Tu blog de confianza
+            </span>
+        </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis numquam et animi? In vitae mollitia iure commodi 
