Se agrego contenido al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <h1>Aqui vamos a hacer un titulo del blog</h1>
-  <p>Aqui va un parrafo</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam alias omnis beatae natus, veritatis voluptatem vitae ad iure magni eum, cupiditate necessitatibus! 
+      Unde, earum ipsam sequi eveniet repellat fugiat quam.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi sed voluptas, minima, dolor et necessitatibus 
+        orro quos aperiam obcaecati accusantium fugit? Est asperiores iure illum adipisci non, magni sunt vel.</p>
 </body>
 </html>
