modifique cabecera y color del texto se agrego like

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog maestro
             </span>
         </div>
         <div id="post">
@@ -21,6 +21,7 @@
                 facere repellendus animi vel, enim quis modi, ab, temporibus adipisci! Aliquid, placeat quisquam.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi sed voluptas, minima, dolor et necessitatibus 
                     orro quos aperiam obcaecati accusantium fugit? Est asperiores iure illum adipisci non, magni sunt vel.</p>
+            <p>Suscribete y dale like</p>         
         </div>
     </div>
 </body>
