--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
                     orro quos aperiam obcaecati accusantium fugit? Est asperiores iure illum adipisci non, magni sunt vel.</p>
             <p>Suscribete y dale like</p>         
         </div>
+        <div id="footer">
+            Hecho con amor en platzi &lt;3
+        </div>
     </div>
 </body>
 </html>
