--- a/blogpost.html
+++ b/blogpost.html
@@ -18,8 +18,8 @@
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Este es un blog increible ya que estamos aprendiendo a utiliar Git y GitHub de manera correcta, aquí vas a aprender cosas
-                maravillosas de esta herramientas. ¡Que increible es Git y GitHub!            
+            <p>Este es un blog incre&iacute;ble ya que estamos aprendiendo a utiliar Git y GitHub de manera correcta, aqu&iacute; vas a aprender cosas
+                maravillosas de esta herramientas. ¡Que incre&iacute;ble es Git y GitHub!            
             </p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi sed voluptas, minima, dolor et necessitatibus 
                     orro quos aperiam obcaecati accusantium fugit? Est asperiores iure illum adipisci non, magni sunt vel.</p>
